Dummy Data, Testing, other adjustments

--- a/AbstraxArtStore/Views/Home/About.cshtml
+++ b/AbstraxArtStore/Views/Home/About.cshtml
@@ -3,21 +3,28 @@
 }
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<div class="container.sm p-5 my-5 border     col-md-4 rounded">
-        <h1>Who Are We</h1>
-    <p>We are Abstrax Art, a brand striving to promote amazing artwork online for everyone to benefit from. Buy beautiful artwork from a range of talented artists or become the talented artist yourself and sell your own.</p>
-    </div>
+<div class="container my-5">
+    <div class="row">
+        
+        <!-- Three containers for about us information -->
+        <div class="col-lg-6">
+            <div class="AboutUs">
+                <h1 class="text-light">Who Are We</h1> <!-- makes the header have a light text colour. This overrides the black colour which is defined in the site.css file. -->
+                <!-- Information -->
+                <p>We are Abstrax Art, a brand striving to promote amazing artwork online for everyone to benefit from. Buy beautiful artwork from a range of talented artists or become the talented artist yourself and sell your own.</p>
+            </div>
 
-    <div class="container.sm p-5 my-5 border col-md-4 rounded">
-        <h1>Mission</h1>
-        <p>
-        Our mission is to provide high quality unique artwork from local, inspired artists, to the people of New Zealand and maybe beyond.
-        </p>
-    </div>
+            <div class="AboutUs">
+                <h1 class="text-light">Mission</h1>
+                <p>Our mission is to provide high quality unique artwork from local, inspired artists, to the people of New Zealand and maybe beyond.</p>
+            </div>
 
-    <div class="container.sm p-5 my-5 border col-md-4 rounded">
-        <h1>Why Abstrax Art?</h1>
-        <p>
-        Abstrax Art is not just a marketplace, its a home for artists to spread their love for art and spread it to the people of New Zealand. Take control of your art and reach a larger audience at a place where you find people with the same love for art.
-        </p>
+            <div class="AboutUs">
+                <h1 class="text-light">Why Abstrax Art?</h1>
+                <p>Abstrax Art is not just a marketplace; it's a home for artists to spread their love for art and share it with the people of New Zealand. Take control of your art and reach a larger audience where people share the same love for art.</p>
+            </div>
+        </div>
+
+
     </div>
+</div>
