--- a/AbstraxArtStore/Views/Home/Cart.cshtml
+++ b/AbstraxArtStore/Views/Home/Cart.cshtml
@@ -7,9 +7,7 @@
 <div id='form-wrapper'>
     
 
-        <div id='header' class='text-center mb-3'>
-            <h1>Your cart has _ items!</h1>
-        </div>
+        
 
         <div class='text-center'>
             <i class="fab fa-cc-visa fa-3x mr-3"></i>
@@ -18,7 +16,7 @@
             <i class="fab fa-cc-discover fa-3x mr-3"></i>
         </div>
 
-        <h5>
+        <h5 class="text-dark">
             Billing Info</h4>
 
             <hr>
@@ -50,7 +48,7 @@
                 </div>
             </div>
 
-            <h5>
+            <h5 class="text-dark">
                 Card Info</h4>
 
                 <hr class='mb-1'>
