--- a/AbstraxArtStore/Views/Shared/_Layout.cshtml
+++ b/AbstraxArtStore/Views/Shared/_Layout.cshtml
@@ -17,9 +17,13 @@
 
 
 </div>
+        <!-- Code which gives the navigation bar its look. This includes the colour, area and behaviour. -->
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-black border-bottom box-shadow mb-3 fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">Abstrax Art</a>
+                <!-- Displays a logo which redricts the user back to the homepage when pressed -->
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/lib/images/Logo.png" alt="Sample Photo" width="200" /></a>
+                
+                <!-- When the screen size is changed, a hamburger icon appears on smaller screens. -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,37 +31,47 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
+                            <!-- Link to take the user to the homepage -->
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>    
                         </li>
                    
                        
                         <li class="nav-item">
+                            <!-- Link to take the user to the products page -->
                             <a class="nav-link text-light" asp-area="" asp-controller="Products" asp-action="">Products</a>
                         </li>
+                        <!-- The links that are within this will only be visible if the user is logged in as an admin. -->
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
+                                <!-- Link to take the user to the orders page -->
                                 <a class="nav-link text-light" asp-area="" asp-controller="Orders" asp-action="">Orders</a>
                             </li>
                             <li class="nav-item">
+                                <!-- Link to take the user to the payments page -->
                                 <a class="nav-link text-light" asp-area="" asp-controller="Payments" asp-action="">Payments</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Carts" asp-action="">Cart</a>
+                                <!-- Link to take the user to the carts page -->
+                                <a class="nav-link text-light" asp-area="" asp-controller="Carts" asp-action="">Carts</a>
                             </li>
                             <li class="nav-item">
+                                <!-- Link to take the user to the categories page -->
                                 <a class="nav-link text-light" asp-area="" asp-controller="Categories" asp-action="">Categories</a>
                             </li>
                         }
                         <li class="nav-item">
+                            <!-- Link to take the user to the About us page -->
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Contact">Contact Us!</a>
+                            <!-- Link to take the user to the Contact us page -->
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Contact">Contact Us</a>
                         </li>
                     
 
                 </div>
+                <!-- Links the _LoginPartial.cshtml file to this file so that the register and login links appear on the right side of the screen. -->
                 <partial name="_LoginPartial"/>
             </div>
         </nav>
