--- a/AbstraxArtStore/Areas/Identity/Pages/Account/Register.cshtml
+++ b/AbstraxArtStore/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,9 +7,9 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="row ">
-    <div class="col-md-4">
+    <div class="col-md-4 ">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h2 class="text-dark">Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
@@ -38,7 +38,7 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-dark">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg bg-black btn-dark">Register</button>
         </form>
     </div>
     <div class="col-md-8 col-md-offset-2">
